--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,51 @@
-/home/kajus/.tmux.conf
+#reload tmux config
+bind r source-file ~/.tmux.conf
+
+#splitting windows
+unbind h
+bind h split-window -h
+unbind v
+bind v split-window -v
+
+#pane resizing
+bind -n ^h resize-pane -L 5
+bind -n ^l resize-pane -R 5
+bind -n ^k resize-pane -U 5
+bind -n ^j resize-pane -D 5
+
+#pane navigation
+unbind j
+bind j select-pane -t :.+
+unbind k
+bind k select-pane -t :.-
+
+#start with window 1 (instead of 0)
+set -g base-index 1
+set -g pane-base-index 1
+
+#vim keys...
+setw -g mode-keys vi
+set -g xterm-keys on
+
+#terminal title bar
+set -g set-titles on
+set -g set-titles-string '#(whoami):#h'
+
+#utf8
+set -g utf8
+set-window-option -g utf8 on
+
+#status bar
+set -g status-bg black
+set -g status-fg white
+set -g status-interval 60
+set -g window-status-current-attr bold
+set -g status-position top
+set -g status-left '#[fg=green]#(whoami)'
+set -g status-right '#[fg=green]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=white]%H:%M'
+
+# explicitly disable mouse control
+setw -g mode-mouse off
+set -g mouse-select-pane off
+set -g mouse-resize-pane off
+set -g mouse-select-window off
